---
source: tests/cli.rs
expression: "Regex::new(r#\"[0-9]+\\.[0-9]+\\.[0-9]+\"#).unwrap().replace(&workflow_str,\n\"<VERSION>\")"
---
[[import]]
format = "conllu"
path = "../import/conll/valid/"
extensions = ["conll", "conllu"]
default_ns = ""

[import.config]
comment_anno = "conll::comment"
labeled_targets = false

[[graph_op]]
action = "check"

[graph_op.config]
failed_only = false
policy = "fail"
overwrite = false

[[graph_op.config.tests]]
query = "node ->dep node"
expected = [1, inf]
description = "Expecting dependency edges"

[footer]
annatto_version = "<VERSION>"
success = true
